[gd_scene load_steps=4 format=3 uid="uid://bkfnldkigi17v"]

[ext_resource type="Script" uid="uid://bs45h1mfgcjry" path="res://level_stuff/interactables/tutorial_bullet.gd" id="1_bvo5o"]

[sub_resource type="Curve" id="Curve_cw6p2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avyqg"]
size = Vector2(55, 25)

[node name="tutorial_bullet" type="CharacterBody2D"]
script = ExtResource("1_bvo5o")

[node name="bullet_body" type="CPUParticles2D" parent="."]
amount = 40
lifetime = 0.5
preprocess = 0.5
local_coords = true
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2(-400, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 10.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_cw6p2")

[node name="bullet_hurtbox" type="Area2D" parent="." groups=["parryable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet_hurtbox"]
visible = false
position = Vector2(-15.5, 1.5)
shape = SubResource("RectangleShape2D_avyqg")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="bullet_hurtbox" to="." method="_on_bullet_hurtbox_area_entered"]
[connection signal="body_entered" from="bullet_hurtbox" to="." method="_on_bullet_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
